[package]
name = "rush"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.40"
anyhow = "1.0.70"
crossterm = "0.26.1"
fs-err = "2.9.0"
bitflags = "2.1.0"
clap = { version = "4.3.24", features = ["derive"] }
rustyline = { version = "12.0.0", features = ["with-fuzzy", "derive"] }
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.105"
wasmtime = "12.0.1"
wasmtime-wasi = "12.0.1"
oneshot = "0.1.5"
