[package]
name = "rush"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
fs-err = "2.9.0"
bitflags = "2.1.0"
clap = { version = "4.3.24", features = ["derive"] }
rustyline = { version = "12.0.0", features = ["with-fuzzy", "derive"] }
serde = { version = "1.0.187", features = ["derive"], optional = true }
serde_json = { version = "1.0.105", optional = true }
wasmtime = { version = "12.0.1", optional = true }
wasmtime-wasi = { version = "12.0.1", optional = true }
oneshot = { version = "0.1.5", optional = true }
snafu = { version = "0.7.5", optional = true }

[features]
default = []
plugin = ["dep:serde", "dep:serde_json", "dep:wasmtime", "dep:wasmtime-wasi", "dep:oneshot", "dep:snafu"]
