[package]
name = "rush-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rush-state = { path = "../rush-state" }
rush-eval = { path = "../rush-eval" }
thiserror.workspace = true
anyhow.workspace = true
ratatui.workspace = true
crossterm.workspace = true
