[package]
name = "rush-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rush-state = { path = "../rush-state" }
thiserror.workspace = true
anyhow.workspace = true
colored.workspace = true
fs-err = "2.9.0"
