[package]
name = "rush-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4" }
clap_builder = { version = "4.2.4" }
rush-state = { path = "../rush-state" }
rush-exec = { path = "../rush-exec" }
thiserror.workspace = true
anyhow.workspace = true
fs-err.workspace = true
