[package]
name = "rush-pdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
concat-idents = "1.1.4"
extism-pdk = "0.3.1"
rush-plugins-api = { version = "0.1.0", path = "../rush-plugins-api" }
rush-pdk-derive = { path = "./rush-pdk-derive" }
