[package]
name = "rush-plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism = "0.3.0"
serde = "1.0.160"
serde_json = "1.0.96"
snafu = "0.7.4"
rush-plugins-api = { path = "../rush-plugins-api" }
anyhow.workspace = true
lazy_static = "1.4.0"

[dev-dependencies]
ctor = "0.2.0"
