[package]
name = "rush-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
ansi-to-tui.workspace = true
fs-err.workspace = true
bitflags.workspace = true
