[package]
name = "rush-exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rush-eval = { path = "../rush-eval" }
rush-parser = { path = "../rush-parser" }
rush-console = { path = "../rush-console" }
rush-state = { path = "../rush-state" }
anyhow.workspace = true
colored.workspace = true
