[package]
name = "rush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rush-state = { path = "../rush-state" }
rush-eval = { path = "../rush-eval" }
anyhow.workspace = true
rush-plugins = { path = "../rush-plugins" }
rush-plugins-api = { path = "../rush-plugins-api" }
is_executable = "1.0.1"
